--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
 	background-color: #212529;
 	font-family: 'Hind', sans-serif;
 	text-transform: uppercase;
+	overflow: hidden;
 }
 
 .container {
